syntax = "proto3";
package signer;

service Signer {

  rpc SignWithKey (SignWithKeyRequest) returns (SignWithKeyResponse);

}

message SignWithKeyRequest {

  string pubKey = 1;
  bytes msEssence = 2;

}

message SignWithKeyResponse {

  string signature = 1;

}
